# q-note

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  README.zh-CN.md  editor.html  index.html  package.json  pnpm-lock.yaml  read.md  tsconfig.app.json  tsconfig.node.json  update.json  vite.config.ts
.github/workflows/: release.yml
.zed/: settings.json  tasks.json
docs/superpowers/plans/: 2026-07-15-compact-context-menu.md
docs/superpowers/specs/: 2026-07-15-compact-context-menu-design.md
scripts/: generate-update-manifest.mjs  upload-update-manifest.mjs
src/: App.css  App.tsx  editor.tsx  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  repository.rs  update.rs
src/app/: DockWindowView.tsx  MainWindowView.tsx
src/components/: AppHeader.tsx  AppToolbar.tsx  CompactDock.tsx  ConfirmDialog.tsx  ContextMenu.tsx  EditorWindow.tsx  EmptyState.tsx  IconButton.tsx  ImagePreview.tsx  NoteCard.tsx  NoteEditor.tsx  NoteList.tsx  QMark.tsx  SettingsDialog.tsx  StatusBar.tsx  Toast.tsx  UpdateDownloadDialog.tsx  contextMenuPosition.ts
src/hooks/: useAppBoot.ts  useDockMode.ts  useTauriEventBridge.ts  useToast.ts  useTrayMenuLabels.ts  useUpdateManager.ts  useWindowStatePersistence.ts
src/lib/: autoStart.ts  clipboard.ts  dockPersistence.ts  env.ts  fileIo.ts  images.ts  menuItems.tsx  noteOrdering.ts  repository.ts  schema.ts  storage.ts  updater.ts  windowControls.ts
tests/: contextMenuPosition.test.ts
(+4 files in other folders)
